fix(MobileUI): message beacon contextual message visibility

--- a/assets/css/components/_notifications.scss
+++ b/assets/css/components/_notifications.scss
@@ -42,6 +42,11 @@
   @media (max-width: 768px) {
     right: 5px;
   }
+  @media (max-height: 550px) {
+    top: -1px;
+    left: -15px;
+    right: initial;
+  }
 }
 
 .message-beacon {
