--- a/assets/css/modules/_left-nav.scss
+++ b/assets/css/modules/_left-nav.scss
@@ -104,10 +104,6 @@ ul.aside {
   }
 }
 
-@media (max-height: 550px) {
-  display: none;
-}
-
 .scroll-parent{
   .scroll-accounts{
     max-height: 150px;
